Remove incorrect mention about Work(2) in templating mechanism.

--- a/docs/design.adoc
+++ b/docs/design.adoc
@@ -76,14 +76,6 @@ c. Assign the JSON node created in step b. to the parent of the `$extends` attri
 
 === Templating
 
-Templating is executed by performing `eval` on every text node whose value starts with `template:` in a JSON object `Work(2)`.
+Templating is executed by performing `eval` on every text node whose value starts with `eval:` in a JSON object `Work(2)`.
 The order where it is applied is determined by `jq` 's `path(..)` function.
 Note that it is not defined in `jq` 's manual<<jq>> how keys are sorted within an object node although they seem to be sorted by dictionary order.
-
-----
-echo {CONTENT OF Work(2)}
-----
-
-And this causes expansions of bash expressions inside the content of "Work(2)" and that expanded string will be printed by the `echo` command.
-
-
