--- a/docs/syntax.adoc
+++ b/docs/syntax.adoc
@@ -11,10 +11,7 @@ The string can be one of
 * When it is placed NOT at the top level of an object node file, a name of a "local node".
 * A script invocation directive.
 
-==== File in `JF_PATH` and Local Node
-
-You can specify a file on `JF_PATH` environment variable.
-If the name ends with `.yaml` or `.yml`, it will be treated as a YAML file and converted into a JSON file by `yq` command.
+==== File in `JF_PATH`
 
 As long as your file is under a directory specified by an element in `JF_PATH`, you can use it.
 That is, suppose that you have `JF_PATH` and it has a value `.:dir1`.
@@ -50,6 +47,13 @@ dir2
 
 You can also specify names of "local nodes".
 (See the section for `$local` keyword)
+
+==== Inheriting YAML files.
+
+You can specify a file on `JF_PATH` environment variable.
+If the name ends with `.yaml` or `.yml`, it will be treated as a YAML file and converted into a JSON file by `yq` command.
+
+This feature is still experimental.
 
 ==== Script Invocation Directive
 
