--- a/docs/top.adoc
+++ b/docs/top.adoc
@@ -1,6 +1,4 @@
-= `jq-front`: JSON with inheritance and templating
-
-== `./` jq-front
+== `./` jq-front: JSON with inheritance and templating
 
 `jq-front` is a simple tool to give your JSON files a power of inheritance and templating.
 It was named after *Cfront*<<Cfront>>, which is an old component of {cpp} language that converts {cpp} source code into C language.
