--- a/docs/syntax.adoc
+++ b/docs/syntax.adoc
@@ -48,7 +48,7 @@ dir2
 You can also specify names of "local nodes".
 (See the section for `$local` keyword)
 
-==== Inheriting YAML files.
+==== Inheriting YAML files
 
 You can specify a file on `JF_PATH` environment variable.
 If the name ends with `.yaml` or `.yml`, it will be treated as a YAML file and converted into a JSON file by `yq` command.
@@ -422,3 +422,42 @@ ERROR: hello
 ----
 
 |===
+
+[#user-functions]
+== Defining a user function for templating
+
+You can define your own function for the templating stage by following syntax.
+First, you can create a file that contains definitions of your functions.
+
+[source, bash]
+.SS.sh
+----
+function hello_world() {
+  echo "Hello, world. My Function!"
+}
+----
+
+Next you reference the file inside the `$extends` syntax.
+
+[source, json]
+----
+{
+  "$extends": [
+    "SS.sh;SOURCE"
+  ],
+  "key": "eval:string:hello_world=$(hello_world),$(echo HELLO)"
+}
+----
+
+The string `SOURCE` is the keyword that tells `jq-front` to import the file.
+And as you see, you are now able to call the function you defined, `hello_world`.
+
+[source, json]
+----
+{
+  "key": "hello_world=Hello, world. My Function!,HELLO"
+}
+----
+
+The file will be rendered as you see above.
+
