Improve documentation Improve release procedure

--- a/docs/manual.adoc
+++ b/docs/manual.adoc
@@ -1,6 +1,7 @@
 == Installation
 
 === Ubuntu
+
 Place the file `jq-front`, `lib`, and `schema` somewhere on your `PATH`.
 Following dependencies will be required by `jq-front`
 
@@ -12,16 +13,26 @@ Following dependencies will be required by `jq-front`
 
 === With Docker (recommended)
 
-Add a following entry to your `.bashrc` or a file sourced through it.
+If you are already using `docker` and `bash`, this is the easiest way to use `jq-front`.
+To install docker, visit
 
-[source, bash]
+* https://docs.docker.com/docker-for-windows/[windows]
+* https://docs.docker.com/docker-for-mac/install/[mac]
+* https://docs.docker.com/install/linux/docker-ce/ubuntu/[ubuntu]
+* https://docs.docker.com/install/linux/docker-ce/centos/[centos]
+
+Add a following entry to your `.bashrc` or a file sourced through it (such as `.profile` on Mac OSX).
+
+[source,shell script]
 include::../jq-front_aliases[]
+
+To install `bash` on windows, https://itsfoss.com/install-bash-on-windows/[install-bash-on-windows] will be helpful.
 
 == Usage
 
 === Command Line Interface
 
-[source, bash]
+[source,bash]
 ----
 jq-front [-h|--help] [-e|--enable-templating] [-d|--disable-templating] [--validation=no|strict|lenient] [TARGET]
 ----
@@ -58,12 +69,12 @@ If any other value is set to the variable, it will not be executed.
 
 `yes`
 
-
 ==== JF_DEBUG
 
 If this variable is set to `enabled`, debug information will be printed to `stderr`.
 
 ===== Default value
+
 `disabled`
 
 
