Add discussion about future performance improvement to docs Sync docs Remove an unnecessary

--- a/docs/limitationsAndFutureWork.adoc
+++ b/docs/limitationsAndFutureWork.adoc
@@ -1,3 +1,45 @@
 == Limitations and Future Work
 
 * https://github.com/dakusui/jq-front/issues[Issues]
+
+=== Make it faster
+
+The largest weakpoint of `jq-front` is its performance.
+It takes seconds to process even a relatively simple and small file.
+
+However, trying to make `jq-front` faster sacrificing the readability of it doesn't seem to me a good idea, especially in case it is written in a language which is generally considered "hard to read and debug".
+
+Instead, we should think of implement it in another language, which is performance-wise more powerful and optimized, such as Java, C#, or whatsoever.
+
+==== Design consideration
+
+* Path in JSON
+* Implementing the 'templating' feature.
+
+===== Path in JSON
+
+To implement a processor like `jq-front` requires a notation to specify a certain point in a JSON node as a string.
+
+`jq` has such as feature out-of-box.
+
+[source, json]
+----
+{
+    "a": {
+       "b": 123,
+       "c": ["HELLO"]
+    }
+}
+----
+
+The string `HELLO` in the array in the example above can be specified by a string `.a.c[0]`.
+
+We need to choose a library that can do this sort of work or implement such a functionality by ourselves.
+
+===== Implementing the 'templating' feature
+
+In order to implement the 'templating' feature, we need to be able to handle a string like following.
+
+----
+    "eval:object:{"hello":"$(ref .root.greeting[0].english)"}
+----
