--- a/docs/syntax.adoc
+++ b/docs/syntax.adoc
@@ -302,6 +302,69 @@ This function is intended for internal use.
 - returned value (stdout):
 * Content of the processed file before any templating happens.
 
+=== `curn` function
+
+A function that returns a path to the node that makes a call to this function.
+
+- parameter: (none)
+- returned value (stdout):
+* A path to the string node that makes the call to this function.
+
+==== Examples
+
+[cols="1a,1a"]
+|===
+|Input |Output
+
+|
+[source,json]
+.A.json
+----
+{
+  "a": {
+    "b": [
+       "eval:$(curn)"
+    ]
+  }
+}
+----
+|[source,json]
+----
+{
+  "a": {
+    "b": [
+       ".a.b[0]"
+    ]
+  }
+}
+----
+
+|
+[source,json]
+.A.json
+----
+{
+  "a": {
+    "b": {
+       "c": "eval:$(cur)"
+    }
+  }
+}
+----
+|[source,json]
+----
+{
+  "a": {
+    "b": {
+       "c": ".a.b.c"
+    }
+  }
+}
+----
+|===
+
+NOTE: The actual outputs of this function are escaped.
+
 === `cur` function
 
 A function that returns a path to a container node to which the current "entry" belongs.
@@ -309,7 +372,7 @@ An "entry" means a string element in an array or a pair of key and value in an o
 
 - parameter: (none)
 - returned value (stdout):
-* A path to "Work(2)" file.
+* A path to the container the node belongs to
 
 ==== Examples
 
