--- a/docs/manual.adoc
+++ b/docs/manual.adoc
@@ -4,15 +4,16 @@
 
 [source,bash]
 ----
-jq-front [-h|--help] [-e|--enable-templating] [-d|--disable-templating] [--validation=no|strict|lenient] [TARGET]
+jq-front [-h|--help] [--validation=no|strict|lenient] [--nested-templating-levels=num] [TARGET]
 ----
 
-- `-h`, `--help`: Shows a help
-- `-e`, `--enable-templating`: Enables templating (default)
-- `-d`, `--disable-templating`: Disables templating
+- `-h`, `--help`: Shows this help
 - `--validation`: Validation mode.
 `no`, `strict`, and `lenient` are available.
 The default is `no`.
+- `--nested-templating-levels`: Number of times templating happens by default.
+The default is `5`.
+If templating doesn't finish within `num` times, an error will be reported.
 - `TARGET`: A file to be processed.
 
 === Environment variables
