--- a/docs/manual.adoc
+++ b/docs/manual.adoc
@@ -48,4 +48,5 @@ If this variable is set to `enabled`, debug information will be printed to `stde
 
 `disabled`
 
-
+[.text-right]
+link:index.html[top]
