--- a/docs/design.adoc
+++ b/docs/design.adoc
@@ -2,7 +2,7 @@
 
 Following is a diagram that illustrates `jq-front` 's processing pipeline design.
 
-[ditaa, target="images/pipeline"]
+[ditaa,target="images/pipeline"]
 .jq-front's pipeline
 ----
 Inheritance mechanism
@@ -83,3 +83,6 @@ c. Assign the JSON node created in step b. to the parent of the `$extends` attri
 Templating is executed by performing `eval` on every text node whose value starts with `eval:` in a JSON object `Work(2)`.
 The order where it is applied is determined by `jq` 's `path(..)` function.
 Note that it is not defined in `jq` 's manual<<jq>> how keys are sorted within an object node although they seem to be sorted by dictionary order.
+
+[.text-right]
+link:index.html[top]
