--- a/docs/syntax.adoc
+++ b/docs/syntax.adoc
@@ -568,3 +568,5 @@ And as you see, you are now able to call the function you defined, `hello_world`
 
 The file will be rendered as you see above.
 
+[.text-right]
+link:index.html[top]
