--- a/docs/manual.adoc
+++ b/docs/manual.adoc
@@ -4,7 +4,7 @@
 
 [source,bash]
 ----
-jq-front [-h|--help] [--validation=no|strict|lenient] [--nested-templating-levels=num] [TARGET]
+jq-front [-h|--help] [--validation=no|strict|lenient] [--nested-templating-levels=num] [--version] [TARGET]
 ----
 
 - `-h`, `--help`: Shows this help
@@ -14,7 +14,9 @@ The default is `no`.
 - `--nested-templating-levels`: Number of times templating happens by default.
 The default is `5`.
 If templating doesn't finish within `num` times, an error will be reported.
+- `--version`: Shows a version.
 - `TARGET`: A file to be processed.
+If not given, `stdin` will be processed.
 
 === Environment variables
 
