--- a/docs/top.adoc
+++ b/docs/top.adoc
@@ -154,6 +154,36 @@ The command line to render the input is following.<<stackoverflow>>
 $ yq . -j in.yaml | jq-front  | yq . -y
 ----
 
+=== HOCON?
+
+// suppress inspection "SpellCheckingInspection"
+HOCON<<hocon>> is another notation intended for human readability and writability.
+It also supports the data inheritance, and the node reference feature.
+However, you have still have good reasons to use `jq-front`.
+
+- The input and output of `jq-front` are both JSON, which are widely accepted standard.
+- `jq-front` allows you to define custom operations very easily by "templating".
+- The capability to structure data (data inheritance and node inheritance) and the improvements in human readability are two separate concerns, which shouldn't be confused.
+
+The last point tends to be looked over frequently but important in context of automating the system configuration, which is necessary in CI/CD.
+In order to configure your system automatically, it is important to generate the configuration file for the system programmatically.
+
+Nevertheless, HOCON is not so machine generatable format as JSON because it is a superset of JSON.
+Even if it is possible, still you end up in a problem, where you will potentially get an object looking differently after a round trip generation.
+That is, you first Write a HOCON file by hand, then process it by your program.
+After that, you may notice that the output of your program doesn't respect your style.
+Style is not important for computers, but it is for human's readability and wasn't it the intention of the notation?
+This situation may come from the design of your pipeline, where you are trying to resolve two problems in a single stage by HOCON.
+One is human readability and the other is value resolution to structure your data.
+Instead, you can separate it into two stages, where those are executed separately.
+
+You can use `jq-front` for the second stage.
+With that, you can utilize any tools and libraries that are designed for JSON.
+// suppress inspection "GrazieInspection"
+(Remember, `jq` itself equips with a very powerful query language after which the tool was named).
+This approach delivers you another benefit, where you can select another solution to improve human readability of your configuration such as YAML.
+
+
 [bibliography]
 == References
 
@@ -168,6 +198,7 @@ $ yq . -j in.yaml | jq-front  | yq . -y
 - [[[json, 5]]] json.org. http://www.json.org/[JSON]:2019
 - [[[jq, 6]]]  jq https://stedolan.github.io/jq/manual/[jq manual]:2019
 - [[[stackoverflow, 7]]] More complex inheritance in YAML? https://stackoverflow.com/questions/14184971/more-complex-inheritance-in-yaml[stackoverflow]:2019
+- [[hocon, 8]] HOCON (Human-Optimized Config Object Notation) https://github.com/lightbend/config[HOCON]:2020
 
 [.text-right]
 link:index.html[top]
