--- a/docs/top.adoc
+++ b/docs/top.adoc
@@ -158,8 +158,7 @@ $ yq . -j in.yaml | jq-front  | yq . -y
 
 // suppress inspection "SpellCheckingInspection"
 HOCON<<hocon>> is another notation intended for human readability and writability.
-It also supports the data inheritance, and the node reference feature.
-However, you have still have good reasons to use `jq-front`.
+It also supports the data inheritance, and the node reference feature but you have still have good reasons to use `jq-front`.
 
 - The input and output of `jq-front` are both JSON, which are widely accepted standard.
 - `jq-front` allows you to define custom operations very easily by "templating".
@@ -168,14 +167,16 @@ However, you have still have good reasons to use `jq-front`.
 The last point tends to be looked over frequently but important in context of automating the system configuration, which is necessary in CI/CD.
 In order to configure your system automatically, it is important to generate the configuration file for the system programmatically.
 
-Nevertheless, HOCON is not so machine generatable format as JSON because it is a superset of JSON.
+// suppress inspection "SpellCheckingInspection"
+However, HOCON is not so machine generatable format as JSON because it is a superset of JSON.
 Even if it is possible, still you end up in a problem, where you will potentially get an object looking differently after a round trip generation.
-That is, you first Write a HOCON file by hand, then process it by your program.
+That is, you first write a HOCON file by hand, then process it by your program.
 After that, you may notice that the output of your program doesn't respect your style.
 Style is not important for computers, but it is for human's readability and wasn't it the intention of the notation?
 This situation may come from the design of your pipeline, where you are trying to resolve two problems in a single stage by HOCON.
+// suppress inspection "GrazieInspection"
 One is human readability and the other is value resolution to structure your data.
-Instead, you can separate it into two stages, where those are executed separately.
+Instead, you can separate it into two stages, where those are executed independently.
 
 You can use `jq-front` for the second stage.
 With that, you can utilize any tools and libraries that are designed for JSON.
