Issue-#152: Fix an issue in "cur" function where it cannot be used from inside an object under an array.

--- a/docs/features.adoc
+++ b/docs/features.adoc
@@ -269,7 +269,7 @@ This feature is still experimental.
 === Templating
 
 Sometimes we need to compose a value of text node from a value of another.
-Following is a such an example.
+Following is such an example.
 
 [source, json]
 .Version file
